--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost/sweater_db
 spring.datasource.username=postgres
 spring.datasource.password=07021989DBP7@
 spring.jpa.generate-ddl=true
+
+#Настройки безопасности для Mustache
+spring.mustache.expose-request-attributes=true
