Добавил к проекту freemarker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.username=postgres
 spring.datasource.password=07021989DBP7@
 spring.jpa.generate-ddl=true
 
-#Настройки безопасности для Mustache
-spring.mustache.expose-request-attributes=true
+#Настройки безопасности для freemarker
+spring.freemarker.expose-request-attributes=true
